@@ -1,5 +1,3 @@
-* handle zone disuse in extension rule
-
 * better criterion for zone disuse error message
 
 * check interoperability with DateTime's {utc,local}_rd_values around leap seconds
